<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>aeye_ros2_driver</name>
  <version>0.1.0</version>
  <description>
    ROS 2 driver for Aeye LiDAR sensors.
    Receives raw UDP point packets from aeye_service and publishes
    sensor_msgs/PointCloud2 for visualization and downstream processing.
  </description>

  <maintainer email="dsirohi@berkeley.edu">Dhruv Sirohi</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Build + runtime dependencies -->
  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>

  <!-- Test dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
